--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,6 @@ body {
 }
 
 /* Responsive design */
-/*PENDIENTE CAMBIAR EL TAMAÑO DEL RESPONSIVE*/
 @media (max-width: 768px) {
     .menu-toggle {
         display: block;
@@ -295,12 +294,9 @@ body {
     align-items: center;
     justify-content: center;
     gap: 2.0rem;
-    /*max-width: 1000px;*/
     margin: 4rem 2.5rem;
     padding: 2rem 1rem;
     background: #fff;
-    /*border-radius: 12px;*/
-    /*box-shadow: 0 2px 12px rgba(0,0,0,0.04);*/
     font-family: 'Arial', sans-serif;
 }
 
@@ -318,7 +314,6 @@ body {
 
 .about-subtitle {
     font-size: 1.5rem;
-    /*color: #333;*/
     color: #000000;
     margin-bottom: 1rem;
     font-weight: 500;
@@ -326,7 +321,6 @@ body {
 
 .about-text p {
     font-size: 1.3rem;
-    /*color: #444;*/
     color: #000000;
     line-height: 1.6;
 }
@@ -339,7 +333,6 @@ body {
 }
 
 .about-image img {
-    /*max-width: 320px;*/
     width: 100%;
     height: auto;
     border-top-left-radius: 100px;
@@ -361,12 +354,8 @@ body {
 
 /* Sección Nuestro Orgullo */
 .orgullo-section {
-    /*max-width: 1100px;*/
-    /*margin: 5rem 0 2rem 0;*/
-    /*padding: 2rem 0;*/
     background: #fff;
     border-radius: 0;
-    /*box-shadow: 0 2px 12px rgba(0,0,0,0.04);*/
     font-family: 'Arial', sans-serif;
     text-align: center;
     width: 100vw;
@@ -397,21 +386,28 @@ body {
     margin: 0;
     padding: 0;
 }
+.orgullo-slides-wrapper {
+    width: 100vw;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 .orgullo-arrow {
-    /*background: rgba(34, 39, 157, 0.8);*/
     background: #004482;
     color: #fff;
     border: none;
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    font-size: 1.5rem;
+    font-size: 2rem;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: background 0.2s;
-    z-index: 10;
+    z-index: 20;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -455,7 +451,6 @@ body {
     bottom: 0;
     width: 100%;
     background: #13315c;
-    /*background: rgba(34, 71, 157, 0.85);*/
     color: #fff;
     padding: 2.5rem 0.5rem 2.0rem 2.5rem;
     border-radius: 0;
@@ -484,7 +479,7 @@ body {
         transform: translateY(-50%);
         width: 40px;
         height: 40px;
-        font-size: 1.2rem;
+        font-size: 1.5rem;
     }
     .orgullo-arrow.left {
         left: 10px;
@@ -507,10 +502,7 @@ body {
 
 /* Sección Servicios */
 .servicios-section {
-    /*max-width: 1200px;*/
     margin: 3rem auto 2rem auto;
-    /*padding: 1rem 2rem;*/
-    /*background: #004482;*/
     border-radius: 12px;
     font-family: 'Arial', sans-serif;
     text-align: center;
@@ -526,16 +518,12 @@ body {
 .servicios-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    /*padding: 0 1rem;*/
 }
 
 .servicio {
     display: flex;
     flex-direction: column;
-    /*gap: 1.5rem;*/
     background: var(--blue-secondary);
-    /*border-radius: 12px;*/
-    
 }
 
 .servicioA{
@@ -555,7 +543,6 @@ body {
 
 .servicio-text {
     padding: 3rem 2rem;
-  
 }
 
 .servicio-text h3 {
@@ -587,7 +574,6 @@ body {
 @media (max-width: 900px) {
     .servicios-grid {
         grid-template-columns: 1fr;
-        /*gap: 2rem;*/
     }
     
     .servicio {
@@ -633,9 +619,7 @@ body {
 
 /* Sección Nuestro Objetivo */
 .objetivo-section {
-    /*max-width: 1100px;*/
     margin: 2rem auto 2rem auto;
-    /*padding: 2rem 1rem;*/
     background: #ffffff;
     border-radius: 12px;
     font-family: 'Arial', sans-serif;
@@ -655,14 +639,12 @@ body {
     position: relative;
 }
 .objetivo-box {
-    /*background: #bdbdbd;*/
     border-radius: 10px;
     padding: 3rem 2.2rem;
     margin: 0 2rem;
     min-width: 220px;
     max-width: 320px;
     text-align: center;
-    /*box-shadow: 0 2px 8px rgba(0,0,0,0.03);*/
 }
 .objetivo-box h3{
     color: var(--blue-third);
@@ -714,11 +696,7 @@ body {
     right: -120px;
     top: 40px;
 }
-.mision{
-    background-color: var(--blue-light);
-}
-.vision{
-    /*background-color: #1a66ad;*/
+.mision, .vision{
     background-color: var(--blue-light);
 }
 
@@ -781,7 +759,6 @@ body {
 .valor-icon {
     width: 300px;
     height: 300px;
-    /*background: #22479D;*/
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -859,7 +836,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(11, 37, 69, 0.65); /* azul oscuro, semitransparente */
+    background: rgba(11, 37, 69, 0.65); 
     pointer-events: none;
     z-index: 1;
 }
@@ -1109,7 +1086,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #0b2545c9; /* azul más claro y semitransparente */
+    background: #0b2545c9; 
     pointer-events: none;
     z-index: 1;
 }
@@ -1216,20 +1193,13 @@ body {
 
 .objetivo-dos-columnas {
     display: block;
-    /*align-items: stretch;*/
     justify-content: center;
     gap: 1.0rem;
-    /*position: relative;*/
 }
 .objetivo-dos-columnas .objetivo-box {
-    /*flex: 1 1 0;*/
     max-width: 100%;
-    /*text-align: left;*/
-    /*background: #bdbdbd;*/
     margin-bottom: 1.2rem;
     padding: 2rem 2.2rem;
-    /*background-color: #004482;*/
-    /*box-shadow: 0 2px 8px rgba(0,0,0,0.03);*/
 }
 @media (max-width: 900px) {
     .objetivo-dos-columnas {
@@ -1351,19 +1321,6 @@ body {
     }
 }
 
-/* Línea que sale del lado izquierdo */
-.section-title-line.left-line::after {
-    left: -100vw;
-    right: 0;
-    width: calc(100vw + 100%);
-}
-
-/* Línea que sale del lado derecho */
-.section-title-line.right-line::after {
-    right: -100vw;
-    left: 0;
-    width: calc(100vw + 100%);
-}
 
 /* Aplicar a títulos específicos */
 .about-text h2,
@@ -1399,7 +1356,6 @@ body {
     z-index: 1;
 }
 .valor-chip:hover, .valor-chip:focus {
-    /*background: #2288e7;*/
     background: var(--blue-primary);
     color: #fff;
 }
@@ -1410,7 +1366,6 @@ body {
     left: 50%;
     top: calc(100% + 15px);
     transform: translateX(-50%) scale(0.95);
-    /*background: #2288e7;*/
     background: var(--blue-primary);
     color: #fff;
     padding: 1rem 1.5rem;
@@ -1458,9 +1413,9 @@ body {
     justify-content: center;
     align-items: center;
     gap: 10px;
-    /*margin: 18px 0 0 0;*/
     min-height: 24px;
     position: static;
+    padding: 2rem;
 }
 .orgullo-dot {
     width: 14px;
@@ -1487,35 +1442,40 @@ body {
 
 .video-full-container {
     width: 100vw;
+    max-width: 100vw;
+    margin: 0;
+    padding: 0 0 20px 0;
+    background: #13315c;
     display: flex;
     justify-content: center;
     align-items: center;
-    /*margin: 0 auto 40px auto;*/
-    position: relative;
-    /*left: 50%;*/
-    /*right: 50%;*/
-    /*margin-left: -50vw;*/
-    /*margin-right: -50vw;*/
-    /*background: #000000;*/
-    padding: 0;
-    background: #13315c;
+    border-radius: 0;
+    box-sizing: border-box;
 }
+
 .video-full-container video {
-    width: 70%;
-    max-width: 1150px;
-    min-width: 280px;
-    height: auto;
-    border-radius: 18px;
-    box-shadow: 0 4px 32px rgba(34,71,157,0.13);
-    margin: 60px 4rem 28px 4rem;
-    background: #000;
     display: block;
+    width: 100vw;
+    max-width: 1200px;
+    height: auto;
+    margin: 0;
+    align-items: center;
+    justify-content: center;
+    background: #000;
+    border-radius: 20px;
 }
+
 @media (max-width: 900px) {
+    .video-full-container {
+        width: 100vw;
+        padding: 0;
+        border-radius: 0;
+    }
     .video-full-container video {
-        width: 96%;
-        margin-left: 1rem;
-        margin-right: 1rem;
+        width: 100vw;
+        max-width: 100vw;
+        margin: 0;
+        border-radius: 0;
     }
 }
 
