--- a/styles.css
+++ b/styles.css
@@ -43,8 +43,10 @@ body {
 }
 
 .logo img {
-    height: 55px;
-    width: auto;
+    /*height: 55px;*/
+    /*height: clamp(30px, 8vh, 70px);*/
+    /*width: auto;*/
+    width: clamp(150px, 20vW, 210px);
 }
 /*Hamburger menu*/
 .menu-toggle {
@@ -206,7 +208,7 @@ body {
 }
 
 /* Responsive design */
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
     .menu-toggle {
         display: block;
     }
@@ -261,19 +263,19 @@ body {
 }
 
 .hero-logo {
-    width: 200px;
-    margin-bottom: 1rem;
+    width: clamp(160px, 20vw, 220px);
 }
 
 .hero h1 {
-    font-size: 3.5rem;
+    font-size: clamp(2rem, 6vw, 3.5rem);
     margin-bottom: 2rem;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .cta-button {
     padding: 1rem 2rem;
-    font-size: 1.2rem;
+    width: clamp(160px, 18vw, 240px);
+    font-size: clamp(0.9rem, 2.5vw, 1.1rem);
     background-color: var(--blue-lightes);
     color: #000000;
     border: none;
