--- a/styles.css
+++ b/styles.css
@@ -273,8 +273,8 @@ body {
 }
 
 .cta-button {
-    padding: 1rem 2rem;
-    width: clamp(160px, 18vw, 240px);
+    padding: 1rem;
+    width: clamp(120px, 20vw, 180px);
     font-size: clamp(0.9rem, 2.5vw, 1.1rem);
     background-color: var(--blue-lightes);
     color: #000000;
@@ -295,9 +295,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 2.0rem;
-    margin: 4rem 2.5rem;
-    padding: 2rem 1rem;
     background: #fff;
     font-family: 'Arial', sans-serif;
 }
@@ -305,24 +302,26 @@ body {
 .about-text {
     flex: 1;
     min-width: 220px;
+    margin: clamp(2rem, 6vw, 4rem) 0 clamp(2rem, 6vw, 4rem) clamp(1rem, 3vw, 2rem);
+    padding: clamp(0.5rem, 2vw, 1rem) clamp(1rem, 3vw, 2rem);
 }
 
 .about-text h2 {
-    font-size: 2.5rem;
+    font-size: clamp(1.5rem, 5vw, 2.5rem);
     margin-bottom: 2rem;
     font-weight: 700;
     color: #22479D;
 }
 
 .about-subtitle {
-    font-size: 1.5rem;
-    color: #000000;
+    font-size: clamp(1rem, 2.5vw, 1.5rem);
+    color: #444;
     margin-bottom: 1rem;
     font-weight: 500;
 }
 
 .about-text p {
-    font-size: 1.3rem;
+    font-size: clamp(1rem, 2.5vw, 1.3rem);
     color: #000000;
     line-height: 1.6;
 }
@@ -336,21 +335,28 @@ body {
 
 .about-image img {
     width: 100%;
-    height: auto;
+    height: 400px;
     border-top-left-radius: 100px;
-    border-bottom-right-radius: 100px;
+    border-bottom-left-radius: 100px;
     background: #ccc;
     object-fit: cover;
+    box-shadow: 0 15px 30px rgba(34, 71, 157, 0.4), 0 8px 20px rgba(34, 71, 157, 0.3);
 }
 
 @media (max-width: 900px) {
     .about-minimal {
         flex-direction: column;
-        gap: 2rem;
-        padding: 1.5rem 0.5rem;
     }
     .about-image img {
-        max-width: 100%;
+        /*max-width: 100%;*/
+        border-top-left-radius: 100px;
+        border-bottom-left-radius: 100px;
+        border-top-right-radius: 100px;
+        border-bottom-right-radius: 100px;
+        /*width: 100%;*/
+    }
+    .about-text{
+        margin-bottom: 1rem;
     }
 }
 
