--- a/styles.css
+++ b/styles.css
@@ -541,20 +541,20 @@ body {
     text-align: right;
     /*border-top-left-radius: 80px;
     border-bottom-left-radius: 80px;*/
-    margin: 0 0 0 30px;
+    /*margin: 0 0 0 30px;*/
     float: right;
 }
 .servicioB{
     text-align: left;
     /*border-top-right-radius: 80px;
     border-bottom-right-radius: 80px;*/
-    margin: 0 30px 0 0;
+    /*margin: 0 30px 0 0;*/
     float: left;
 }
 
 .servicio-text {
     padding: 1.8rem 1.5rem;
-    border-radius: 5%;
+    /*border-radius: 5%;*/
 }
 
 .servicio-text h3 {
@@ -581,6 +581,9 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+.text-info{
+    margin-bottom: 1rem;
 }
 
 @media (max-width: 900px) {
