--- a/styles.css
+++ b/styles.css
@@ -649,11 +649,11 @@ body {
 }
 
 .mision-title{
-    margin: 0 0 0 3rem;
+    margin: 0 0 0 5rem;
 }
 
 .vision-title{
-    margin: 0 3rem 0 0;
+    margin: 0 5rem 0 0;
 }
 .col-lg-6{
     flex: 1;
@@ -662,6 +662,17 @@ body {
     padding: 0 0 2rem 0; 
 }
 
+.space{
+    gap: 3rem;
+}
+
+.misionvision-text{
+    color: #ffffff;
+    font-size: clamp(0.8rem, 2vw, 1.3rem);
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+}
 /* Responsive para pantallas pequeñas */
 @media (max-width: 768px) {
     .container-mision, .container-vision{
